# ii-researcher

./: .gitignore  .pre-commit-config.yaml  README.md  api.py  cli.py  docker-compose.yml  pyproject.toml
baml_src/: action.baml  bad_context.baml  clients.baml  critic.baml  dedup.baml  error_analyzer.baml  generators.baml  knowledge.baml  report.baml  rewriter.baml  segment_extraction.baml
baml_src/evaluator/: attribution.baml  completeness.baml  definitive.baml  freshness.baml  plurality.baml  question_evaluation.baml  test.baml  types.baml
benchs/: ds_to_test_final_56.json
docker/: Dockerfile.api  Dockerfile.litellm
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: question-input.tsx  think.tsx  thinking-step.tsx  thoughts.tsx
frontend/providers/: index.tsx
frontend/typings/: agent.ts
ii_researcher/: config.py  events.py
ii_researcher/pipeline/: agent.py  evaluator.py  schemas.py  state.py
ii_researcher/pipeline/action_handler/: answer.py  base.py  reflect.py  search.py  visit.py
ii_researcher/reasoning/: agent.py  config.py
ii_researcher/reasoning/clients/: openai_client.py
ii_researcher/reasoning/models/: output.py  trace.py
ii_researcher/reasoning/tools/: base.py  registry.py  web_scraper.py  web_search.py
ii_researcher/tools/: read.py  web_scraper_compressor.py
ii_researcher/tools/compressor/: context_compressor.py  llm_compressor.py
ii_researcher/tools/scraper/: scraper.py
ii_researcher/utils/: stream.py
tests/: test_context_compressor.py
(+2 files in other folders)
